--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="duarte.gabriel.maquina">
+    package="duarte2.gabriel2.maquina2">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="duarte2.gabriel2.maquina2.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,9 +20,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".FinalizarCompra"
+            android:name="duarte2.gabriel2.maquina2.FinalizarCompra"
             android:label="Finalizar Pedido" />
-        <activity android:name=".AdapterListView"></activity>
+        <activity android:name="duarte2.gabriel2.maquina2.AdapterListView"></activity>
     </application>
 
 </manifest>
