--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "duarte2.gabriel2.maquina2"
+        applicationId "br.com.smartbar"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
-        versionName "1.4"
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
